--- a/forum/package.json
+++ b/forum/package.json
@@ -8,7 +8,8 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "pu": "vendor/bin/phpunit"
+        "pu": "vendor/bin/phpunit",
+        "puf": "vendor/bin/phpunit --filter"
     },
     "devDependencies": {
         "axios": "^0.16.2",
